# SortingAlgorithmVisualizer

./: CMakeLists.txt
C++/: CMakeLists.txt
C++/include/: algorithms.hpp  marker.hpp  menu.hpp  shared.hpp  sorter.hpp
C++/src/: algorithms.cpp  main.cpp  marker.cpp  menu.cpp  shared.cpp  sorter.cpp
PYTHON/: main.py  shared.py  sort_algorithm.py  sorts.py
include/: visualizer.hpp
src/: main.cpp
